--- a/joimUs/src/main/webapp/WEB-INF/web.xml
+++ b/joimUs/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,8 @@
 			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
+		<async-supported>true</async-supported>
+		
 		
 	<!-- 이미지  업로드 규격설정 -->
 		<multipart-config>
@@ -54,5 +56,8 @@
 		<filter-name>encodingFilter</filter-name>        
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	
+
 
 </web-app>
